# wellbeing

./: .gitignore  Cargo.toml  README.md
config/: config.8081.json  config.json
docs/: development.md
src/: app.rs  auth.rs  checkins.rs  companion.rs  config.rs  database.rs  email.rs  error.rs  guardrails.rs  heartbeat.rs  main.rs  provider.rs  secrets.rs  telegram.rs  tenant.rs  turnstile.rs  whisper.rs
static/: chat.html  gemini-guide.html  index.html  login.html  onboarding.html  settings.html  v2.html  v3.html
static/css/: style.css  v2.css  v3.css
static/js/: app.js
templates/tenant/: agent.md  bootstrap.md
tools/: prompt_cases.json  prompt_harness.py  prompt_harness_results.json  system_prompt_candidate.txt
