[package]
name = "wellbeing"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11"
base64 = "0.22"
axum = { version = "0.7", features = ["http1", "json", "tokio"] }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
argon2 = "0.5"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
